Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -59,7 +59,7 @@ by 2030'} (Mazzucato, 2018), or \textit{`Ensure that people can enjoy at least 5
 \begin{figure}[!ht]
     \centering
     \includegraphics[width=0.5\textwidth]{figures/fig1_example.png}
-    \caption{Example mission}
+    \caption{A mission example (taken from Mazzucatto (2018))}
     \label{fig:my_label}
 \end{figure}
 
@@ -79,7 +79,7 @@ innovation research and policy shift from advancing knowledge and producing tech
 
 Another important reason for renewed interest in the mission framework is the notion that traditional R\&I policies based on market failure and system failure rationales ignore the directionality of technical change, have low additionality and tend to be captured by the status quo (Cantner \& Vannuccini, 2018; Frenken, 2017). In other words, they support incremental activities that might not be the most societally desirable, and in some cases would have been carried out anyway, generally by powerful, established incumbents (Frenken, 2017). 
 
-This way of thinking about the goals of R\&I policy draws on evolutionary economics and complexity science ideas suggesting that technological development is directional (it can unfold in many possible trajectories) and uncertain in outcomes. It also moves away from notions of optimality in technical change: The trajectories of development that are selected ‘from the bottom up’, for example by market forces might not be the most beneficial one if they generate unanticipated externalities and path dependences that prevent shifts away from it further down the line, as we see in the economy’s lock-in to environmentally unsustainable fossil fuels (Aghion, David, & Foray, 2009; Arthur, 2009; David, 1985). Further. ‘normal’ R&I takes place through an exploration of the ‘adjacent possible’ where bodies of knowledge that are technically closer tend to be recombined more often because they exist in the same organisation, or in related organisations (Boschma, 2005; Hidalgo et al., 2018). All this means that R\&I policies that simply seek to increase the amounts invested in R&D (as R\&D tax credits do under a market failure rationale) or the responsiveness of academic researchers to industry needs (as knowledge exchange programs informed by a systems failure rationale do) will fail to generate societally beneficial, boundary spanning innovations (Gustafsson & Autio, 2011). 
+This way of thinking about the goals of R\&I policy draws on evolutionary economics and complexity science ideas suggesting that technological development is directional (it can unfold in many possible trajectories) and uncertain in outcomes. It also moves away from notions of optimality in technical change: The trajectories of development that are selected ‘from the bottom up’, for example by market forces might not be the most beneficial one if they generate unanticipated externalities and path dependences that prevent shifts away from it further down the line, as we see in the economy’s lock-in to environmentally unsustainable fossil fuels (Aghion, David, & Foray, 2009; Arthur, 2009; David, 1985). Further. ‘normal’ R\&I takes place through an exploration of the ‘adjacent possible’ where bodies of knowledge that are technically closer tend to be recombined more often because they exist in the same organisation, or in related organisations (Boschma, 2005; Hidalgo et al., 2018). All this means that R\&I policies that simply seek to increase the amounts invested in R&D (as R\&D tax credits do under a market failure rationale) or the responsiveness of academic researchers to industry needs (as knowledge exchange programs informed by a systems failure rationale do) will fail to generate societally beneficial, boundary spanning innovations (Gustafsson & Autio, 2011). 
 
 Many recent expressions of dissatisfaction with the status quo of research and innovation policy reflect this view. Some examples include concerns about a `bubble' in biomedical research, an AI bias towards automating labour instead of complementing it, and evidence of a productivity puzzle where increasing investments on R\&D fail to produce corresponding improvements in productivity growth and societal well\-being (Acemoglu \& Restrepo, 2018; Jones & Wilsdon, 2018; Restrepo & Acemoglu, 2018; Sarewitz, 2016).
 
@@ -162,7 +162,7 @@ generate technological outputs (i.e. are technologically feasible).
 
 Third, it is also important to consider the diversity of activities that are being supported through the mission in terms of the disciplines, industries and actors involved: are these novel and unexpected, and do they involve new `entrants’? Here we can develop indicators measuring the disciplinary and industry mix of the activities supported by a mission, and compare the actors participating in it with those involved in areas outside of the mission. Over time, we would expect successful missions to change the structure of R&I networks, bringing key disciplines and the actors involved in them into new fields and communities. We should develop indicators that capture this.
 
-Finally, the evidence base should capture the time\-lines and goals of the mission: what does it seek to achieve, over what period, and with what success. Some of the relevant indicators can be directly extracted from the specification of the mission (eg. reach zero greenhouse emissions by 2030). This is a different question from whether these indicators are being measured in a suitable way, and from the extent to which changes in those indicators (impacts) can be attributed to the mission itself (as compared to broader socio-economic trends and technological breakthroughs supported outside of the mission). 
+Finally, the evidence base should capture the time\-lines and goals of the mission: what does it seek to achieve, over what period, and with what success. Some of the relevant indicators can be directly extracted from the specification of the mission (eg reach zero greenhouse emissions by 2030). This is a different question from whether these indicators are being measured in a suitable way, and from the extent to which changes in those indicators (impacts) can be attributed to the mission itself (as compared to broader socio-economic trends and technological breakthroughs supported outside of the mission). 
 
 \subsection{About this paper}
 \label{subsec: about}
@@ -172,6 +172,13 @@ In this paper we develop and explore prototype indicators operationalising key d
 We define a mission field as the set of R&I activities that are directly relevant for a mission. We establish relevance using a semantic approach that extracts keywords from the definition of a mission and then queries the funding corpus with a version of that keyword set expanded via semantic similarity in a word embedding space. Having identified relevant projects, we then calculate indicators in the mission field. All these activities are described in further detail in the Methodology and Findings sections below.
 
 We focus on dimensions 2, 3, and 4 in Table 1, considering actors, activities and networks but not societal needs and impacts (see figure below for a summary). This decision is dictated by the data source we are focusing on (which is limited in its coverage of information about societal needs), and the fact that the innovation mission we are focusing on was only recently announced so it would be unrealistic to expect them to have produced visible impacts so early after launch. We discuss potential avenues to generate indicators about other dimensions of the evidence base for missions in Section \ref{sec:conclusion}.
+
+\begin{figure}[!ht]
+    \centering
+    \includegraphics[width=0.5\textwidth]{figures/fig_2_mission_diagram.png}
+    \caption{Pathways to impact in a mission, and }
+    \label{fig:my_label}
+\end{figure}
 
 It is important to note that the UK Government only announced the Grand Challenge Mission about AI and chronic diseases in 2018. This means that much of our analysis will not capture activities supported by the mission or its impact, but activities already taking place before the mission was launched. In that sense, our analysis should be seen as providing a baseline for the impact of the mission - an important function nevertheless.
 
